fix for basicInfo component gap between profileAvatar and text

--- a/src/styles/basicInfo.css
+++ b/src/styles/basicInfo.css
@@ -11,6 +11,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+
+    gap: 20px;
 }
 
 
